# aula_api_usp_graduacao

./: .gitignore  README.md  __init__.py  alembic.ini  anotações.txt  pyproject.toml  run_api.py
alembic/: env.py
alembic/versions/: 2abe63b5f6bd_v0_0_1_criando_tabelas_no_schema_api.py
app/: crud.py  database.py  main.py  models.py  schemas.py
requests_api/: create_registro.py  create_registro_batch.py  delete_registro.py  get_registro_by_id.py  get_registro_cidade.py  get_registros.py  search_by_visitados.py
templates/: create.sql  create_db.py
